Hide x overflow attempt to fix mobile header issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,10 @@ html {
     box-sizing: border-box;
     font-size: 16px;
 }
+
+html,body{
+    overflow-x: hidden;
+}
   
 *, *:before, *:after {
     box-sizing: inherit;
